# clouget-pos

./: .gitignore  CHANGELOG.md  CLAUDE.md  CORRECCIONES.md  app.json  index.html  package-lock.json  package.json  vite.config.ts
scripts/: release.ps1  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/firma/: firmar-xml.cjs
src-tauri/icons/: icon.icns
src-tauri/src/: branding.rs  lib.rs  main.rs  utils.rs
src-tauri/src/app_movil/: commands.rs  discovery.rs  http.rs  http_st.rs  mod.rs  push.rs  schema.rs
src-tauri/src/backup/: cloud.rs  encrypt.rs  mod.rs  scheduler.rs
src-tauri/src/commands/: caja.rs  clientes.rs  combos.rs  compras.rs  config.rs  contabilidad.rs  cotizacion_pdf.rs  cuentas.rs  cuentas_pagar.rs  demo.rs  establecimientos.rs  etiquetas.rs  exportar.rs  gastos.rs  impresion.rs  inventario.rs  licencia.rs  listas_precios.rs  mod.rs  nota_venta_pdf.rs  oauth_email.rs  productos.rs  proveedores.rs  reportes.rs  respaldo.rs  retenciones.rs  servicio_tecnico.rs  servicio_tecnico_abonos.rs  servicio_tecnico_catalogo.rs  servicio_tecnico_items.rs  servicio_tecnico_reportes.rs  sri.rs  sri_avanzado.rs  transferencias.rs  usuarios.rs  ventas.rs  verificacion.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/models/: caja.rs  cliente.rs  compra.rs  cuenta.rs  cuenta_pagar.rs  establecimiento.rs  gasto.rs  lista_precio.rs  mod.rs  orden_servicio.rs  producto.rs  proveedor.rs  usuario.rs  venta.rs
src-tauri/src/offline/: cache.rs  mod.rs
src-tauri/src/printing/: mod.rs
src-tauri/tests/: smoke_test.rs
(+102 files in other folders)
